Bug 367781 - marble-qt's UI is not translatable
Summary: marble-qt's UI is not translatable
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0 (KDE Applications 16.08)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-24 21:59 UTC by Alexander Potashev
Modified: 2016-08-27 22:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2016-08-24 21:59:03 UTC
When I run Marble with "marble-qt", the whole UI is in English, even though I have marble_qt.qm with Russian translations, and when I run "marble" I get translated UI.

Reproducible: Always
Comment 1 Burkhard Lück 2016-08-25 07:23:59 UTC
confirmed with recent frameworks + marble master compiled from sources
Comment 2 Friedrich W. H. Kossebau 2016-08-27 22:16:24 UTC
Git commit 7bd7321e2f6a55cccb51b13bcb642ce0093972d1 by Friedrich W. H. Kossebau.
Committed on 27/08/2016 at 22:14.
Pushed by kossebau into branch 'master'.

Make marble-qt find the KDE-translator/packaging based qm catalog files

M  +46   -4    src/apps/marble-qt/qtmain.cpp

http://commits.kde.org/marble/7bd7321e2f6a55cccb51b13bcb642ce0093972d1
Comment 3 Friedrich W. H. Kossebau 2016-08-27 22:20:02 UTC
Git commit a465496b3b7d2baeefbabaff0a96cda78521a84a by Friedrich W. H. Kossebau.
Committed on 27/08/2016 at 22:19.
Pushed by kossebau into branch 'Applications/16.08'.

Make marble-qt find the KDE-translator/packaging based qm catalog files

M  +46   -5    src/apps/marble-qt/qtmain.cpp

http://commits.kde.org/marble/a465496b3b7d2baeefbabaff0a96cda78521a84a