Make marble-qt find the KDE-translator/packaging based qm catalog files

BUG: 367781